[JBWS-2505] don't deploy AS integration layer
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@9297 50344849-fb0f-0410-a53f-a94597aac05c