@@ -406,8 +406,6 @@
         <jbossws.integration.target>jboss500</jbossws.integration.target>
       </properties>
       <dependencies>
-        <!-- [JBWS-2263] -->
-        <!-- START -->
         <dependency>
           <groupId>org.jboss.ws</groupId>
           <artifactId>jbossws-jboss500</artifactId>
@@ -418,12 +416,6 @@
             </exclusion>
           </exclusions>
         </dependency>
-        <!--dependency>
-          <groupId>org.jboss.jbossas</groupId>
-          <artifactId>jboss-as-webservices</artifactId>
-          <version>${jboss.version}</version>
-        </dependency-->
-        <!-- END -->
         <dependency>
           <groupId>org.hibernate</groupId>
           <artifactId>hibernate</artifactId>
@@ -476,6 +468,98 @@
     </profile>
 
     <!--
+    Name:  jboss501
+    Descr: JBoss-5.0.1 specific options
+    -->
+    <profile>
+      <id>jboss501</id>
+      <properties>
+        <jboss.version>5.0.1-SNAPSHOT</jboss.version>
+        <jbossws.integration.target>jboss501</jbossws.integration.target>
+      </properties>
+      <dependencies>
+        <!-- [JBWS-2505] -->
+        <!-- START -->
+        <!--dependency>
+          <groupId>org.jboss.ws</groupId>
+          <artifactId>jbossws-jboss501x</artifactId>
+          <exclusions>
+            <exclusion> Exclude old jaxws impl transitive dependency brought in by jboss-metadata
+              <groupId>jboss.jbossws</groupId>
+              <artifactId>jboss-jaxws</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency-->
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-webservices</artifactId>
+          <version>${jboss.version}</version>
+          <exclusions>
+            <exclusion> <!-- Exclude old jaxws impl transitive dependency brought in by jboss-metadata -->
+              <groupId>jboss.jbossws</groupId>
+              <artifactId>jboss-jaxws</artifactId>
+            </exclusion>
+          </exclusions>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.security</groupId>
+              <artifactId>jbosssx</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <!-- END -->
+        <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate</artifactId>
+          <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-ejb3</artifactId>
+          <version>${jboss.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.security</groupId>
+              <artifactId>jbosssx</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-security</artifactId>
+          <version>${jboss.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.javaee</groupId>
+          <artifactId>jboss-javaee</artifactId>
+          <version>${jboss.javaee.version}</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <!-- http://jira.codehaus.org/browse/MCOMPILER-72 -->
+              <testExcludeFile>../test-excludes-jboss501.txt</testExcludeFile>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>${surefire.jvm.args} -Djava.endorsed.dirs=${jboss501.home}/lib/endorsed</argLine>
+              <!-- TODO: replace with maven dependencies -->
+              <additionalClasspathElements>
+                <additionalClasspathElement>${jboss.home}/client/jbossall-client.jar</additionalClasspathElement>
+                <additionalClasspathElement>${jboss.home}/common/lib/jboss-ejb3-core.jar</additionalClasspathElement>
+              </additionalClasspathElements>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!--
     Name:  jboss510
     Descr: JBoss-5.1.0 specific options
     -->
@@ -486,23 +570,35 @@
         <jbossws.integration.target>jboss510</jbossws.integration.target>
       </properties>
       <dependencies>
-        <!-- [JBWS-2263] -->
+        <!-- [JBWS-2505] -->
         <!-- START -->
-        <dependency>
+        <!--dependency>
           <groupId>org.jboss.ws</groupId>
           <artifactId>jbossws-jboss510x</artifactId>
+          <exclusions>
+            <exclusion> Exclude old jaxws impl transitive dependency brought in by jboss-metadata
+              <groupId>jboss.jbossws</groupId>
+              <artifactId>jboss-jaxws</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency-->
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-webservices</artifactId>
+          <version>${jboss.version}</version>
           <exclusions>
             <exclusion> <!-- Exclude old jaxws impl transitive dependency brought in by jboss-metadata -->
               <groupId>jboss.jbossws</groupId>
               <artifactId>jboss-jaxws</artifactId>
             </exclusion>
           </exclusions>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.security</groupId>
+              <artifactId>jbosssx</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
-        <!--dependency>
-          <groupId>org.jboss.jbossas</groupId>
-          <artifactId>jboss-as-webservices</artifactId>
-          <version>${jboss.version}</version>
-        </dependency-->
         <!-- END -->
         <dependency>
           <groupId>org.hibernate</groupId>
@@ -566,23 +662,35 @@
         <jbossws.integration.target>jboss600</jbossws.integration.target>
       </properties>
       <dependencies>
-        <!-- [JBWS-2263] -->
+        <!-- [JBWS-2505] -->
         <!-- START -->
-        <dependency>
+        <!--dependency>
           <groupId>org.jboss.ws</groupId>
           <artifactId>jbossws-jboss600x</artifactId>
+          <exclusions>
+            <exclusion> Exclude old jaxws impl transitive dependency brought in by jboss-metadata
+              <groupId>jboss.jbossws</groupId>
+              <artifactId>jboss-jaxws</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency-->
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-webservices</artifactId>
+          <version>${jboss.version}</version>
           <exclusions>
             <exclusion> <!-- Exclude old jaxws impl transitive dependency brought in by jboss-metadata -->
               <groupId>jboss.jbossws</groupId>
               <artifactId>jboss-jaxws</artifactId>
             </exclusion>
           </exclusions>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.security</groupId>
+              <artifactId>jbosssx</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
-        <!--dependency>
-          <groupId>org.jboss.jbossas</groupId>
-          <artifactId>jboss-as-webservices</artifactId>
-          <version>${jboss.version}</version>
-        </dependency-->
         <!-- END -->
         <dependency>
           <groupId>org.hibernate</groupId>
